# brmasso

./: .env.example  .gitignore  README.md  br_massoterapia.db  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  main.py  models.py  schemas.py  services.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/br_massoterapia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/lib/: api.ts  fallback.ts
infra/: DEPLOY_OCI.md  docker-compose.prod.yml
infra/nginx/: default.conf
