[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "br-massoterapia-backend"
version = "0.1.0"
description = "API para gestao da BR Massoterapia"
requires-python = ">=3.13"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
